Update SecurityConfig.java
sharan